--- a/layout/prototype.html
+++ b/layout/prototype.html
@@ -6,40 +6,248 @@
     <title>Ríki:layout</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <style>
 
+div, body, input, select { font-family: "Noto Sans", sans-serif; }
 nav .nav-wrapper { max-width: 992px; margin: 0 auto; padding: 0 20px; }
 nav .sidenav-toggle { padding: 0 20px; margin-left: -20px; }
+nav ul li:last-child { margin-right: -20px; }
+nav .brand-logo .subtitle { display: none; }
+
+.riki-teal { background: #00ae9a; color: #ffffff; }
+
+header nav { overflow: hidden; height: 392px; position: relative; }
+header .logo-wrapper { position: relative; max-width: 992px; margin: 0 auto; }
+header .logo-wrapper div { position: absolute; }
+#header-background-icon {
+  top: 82px; left: 92px; width: 83px; height: 86px;
+  background: url('icon.png') no-repeat;
+  background-size: 100%;
+}
+#header-background-modules {
+  top: 40px; left: 40px; width: 187px; height: 172px;
+  background: url('modules.png') no-repeat;
+  background-size: 100%;
+}
+#header-background-name {
+  top: 242px; left: 40px; width: 187px; height: 67px;
+  background: url('name.png') no-repeat;
+  background-size: 100%;
+}
+#header-background-subtitle {
+  top: 298px; left: 40px; width: 187px;
+  font-weight: 200; font-size: 19px;
+  text-align: center;
+}
+header ul { position: relative; top: calc(392px - 64px); }
+
+.navbar-fixed { position: absolute; top: 0px; display: none; }
 
 @media only screen and (max-width: 992px) {
   nav .brand-logo.left { left: auto; }
+  nav .brand-logo .subtitle { display: inline; }
+}
+
+@media only screen and (max-width: 600px) {
+  nav ul li.icon a { height: 56px; width: 64px; padding: 0 20px }
+  nav .icon-text { display: none !important; }
+  header { display: none; }
+  .navbar-fixed { display: block; }
 }
 
     </style>
   </head>
   <body>
 
-<!-- Toolbar -->
-<div class="navbar-fixed">
-  <nav class="teal darken-2">
+<!-- Header -->
+<header>
+  <nav class="teal darken-1">
+    <div class="logo-wrapper">
+      <div id="header-background-icon"></div>
+      <div id="header-background-modules"></div>
+      <div id="header-background-name"></div>
+      <div id="header-background-subtitle">Connecting Libraries</div>
+    </div>
     <div class="nav-wrapper">
       <a href="#" data-target="mobile-demo" class="sidenav-toggle left hide-on-large-only"><i class="material-icons">menu</i></a>
-      <a href="/home" class="left brand-logo">Ríki Logo</a>
-      <ul class="right account">
-        <li class="hide-on-small-only"><a id="btnMetaInfo"><i class="material-icons left">info</i> Versions</a></li>
-        <li><a id="btnLogin"><i class="material-icons left">account_circle</i><span class="hide-on-small-only"> Login / Signup</span></a></li>
+      <ul class="right">
+        <li class="icon"><a class="btnLogin"><i class="material-icons left">account_circle</i><span class="icon-text"> Login / Signup</span></a></li>
       </ul>
+      <div class="account">
+
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- Toolbar -->
+<div class="navbar-fixed">
+  <nav class="teal darken-1">
+    <div class="nav-wrapper">
+      <a href="#" data-target="mobile-demo" class="sidenav-toggle left hide-on-large-only"><i class="material-icons">menu</i></a>
+      <a href="/home" class="left brand-logo"><img src="logo-small.png" /> <span class="subtitle">Connecting Libraries</span></a>
+      <ul class="right">
+        <li class="icon"><a class="btnLogin"><i class="material-icons left">account_circle</i><span class="icon-text"> Login / Signup</span></a></li>
+      </ul>
+      <div class="account">
+
+      </div>
     </div>
   </nav>
 </div>
 
 <!-- Navigation -->
 <!-- Content -->
+<div style="height:2000px;"></div>
 <!-- Footer -->
 
 <!-- JS sources -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+<script>
+  // scroll
+  (function($, w, d, u) {
+      // $ = jQuery, w = window, d = document, u = undefined
+      $(d).ready(function() {
+          let heightOfLargeHeader = $('body > header').height();
+          let heightOfSmallHeader = $('div.navbar-fixed').height();
+          let headerAnimationEnd = heightOfLargeHeader - heightOfSmallHeader;
+          let scrollAnimations = [
+              {
+                  from: 0,
+                  to: 40,
+                  during: [
+                      {
+                          element: $('#header-background-name'),
+                          vars: {
+                              left: [40, 124],
+                          },
+                          styles: {
+                              left: '%left%px',
+                          }
+                      }
+                  ],
+              },
+              {
+                  from: 40,
+                  to: headerAnimationEnd,
+                  before: [
+                      {
+                          element: $('div.navbar-fixed'),
+                          styles: {
+                              display: 'none',
+                          },
+                      }
+                  ],
+                  during: [
+                      {
+                          element: $('#header-background-icon'),
+                          vars: {
+                              top: [82, 231+64+24+20],
+                              left: [92, 10+20],
+                              width: [83, 43],
+                          },
+                          styles: {
+                              top: '%top%px',
+                              left: '%left%px',
+                              width: '%width%px',
+                          }
+                      },
+                      {
+                          element: $('#header-background-modules'),
+                          vars: {
+                              top: [40, 189+64+24+44],
+                              left: [40, -42+44],
+                              width: [187, 99],
+                          },
+                          styles: {
+                              opacity: '%i%',
+                              top: '%top%px',
+                              left: '%left%px',
+                              width: '%width%px',
+                          }
+                      },
+                      {
+                          element: $('div.navbar-fixed'),
+                          styles: {
+                              display: 'none',
+                          },
+                      },
+                  ],
+                  after: [
+                      {
+                          element: $('div.navbar-fixed'),
+                          styles: {
+                              display: 'block',
+                          },
+                      },
+                  ],
+              },
+          ];
+
+          let applyStyles = function applyStyles(definition, p) {
+              let v, vars = {
+                  p: p,
+                  i: Math.abs(p - 1),
+              };
+
+              if (definition.vars) {
+                  let start, end, diff, current;
+                  for (v in definition.vars) {
+                      [start, end] = definition.vars[v];
+                      diff = Math.abs(end - start);
+                      current = p * diff;
+                      vars[v] = start > end ? start - current : start + current;
+                  }
+              }
+
+              if (definition.element && definition.styles) {
+                  let style, value;
+                  for (style in definition.styles) {
+                      value = definition.styles[style];
+                      for (v in vars) {
+                          value = value.split('%' + v + '%').join(vars[v]);
+                      }
+                      definition.element.css(style, value);
+                  }
+              }
+          };
+
+          $(w).scroll(function() {
+              let st = d.documentElement.scrollTop || d.body.scrollTop;
+
+              let p, elements, j, i = scrollAnimations.length;
+              while (i--) {
+                  if (st <= scrollAnimations[i].from) {
+                      p = 0;
+                      elements = scrollAnimations[i].before;
+                  } else if (st >= scrollAnimations[i].to) {
+                      p = 1;
+                      elements = scrollAnimations[i].after;
+                  } else {
+                      p = (st - scrollAnimations[i].from) / (scrollAnimations[i].to - scrollAnimations[i].from);
+                      elements = scrollAnimations[i].during;
+                  }
+                  j = elements.length;
+                  while (j--) {
+                      applyStyles(elements[j], p);
+                  }
+              }
+          }).scroll();
+
+          if (!w.location.href.match(/^https?:\/\/[a-z-.]+\/(home?)$/)) {
+              w.setTimeout(function() {
+                  let st = d.documentElement.scrollTop || d.body.scrollTop;
+                  if (st < headerAnimationEnd) {
+                      $(w).scrollTo(headerAnimationEnd)
+                  }
+              }, 100);
+          }
+      });
+  }(jQuery, window, document))
+</script>
 
   </body>
 </html>
