--- a/layout/prototype.html
+++ b/layout/prototype.html
@@ -14,30 +14,28 @@
 
       div, body, input, select { font-family: "Noto Sans", sans-serif; }
       nav .nav-wrapper { max-width: 992px; margin: 0 auto; padding: 0 20px; }
-      nav .sidenav-toggle { padding: 0 20px; margin-left: -20px; }
+      nav .sidenav-toggle { padding: 0 20px; margin-left: -20px; position: absolute; bottom: 0; }
       nav ul li:last-child { margin-right: -20px; }
-
-      .riki-teal { background: #00ae9a; color: #ffffff; }
 
       header nav { overflow: hidden; height: 640px; position: relative; }
       header .logo-wrapper div { position: absolute; }
       #header-background-icon {
-        top: 82px; left: 92px; width: 83px; height: 86px;
+        bottom: 334px; left: 354px; width: 83px; height: 86px;
         background: url('icon.png') no-repeat;
         background-size: 100%;
       }
       #header-background-modules {
-        top: 40px; left: 40px; width: 187px; height: 172px;
+        bottom: 290px; left: 302px; width: 187px; height: 172px;
         background: url('modules.png') no-repeat;
         background-size: 100%;
       }
       #header-background-name {
-        top: 242px; left: 40px; width: 187px; height: 67px;
+        bottom: 196px; left: 302px; width: 187px; height: 67px;
         background: url('name.png') no-repeat;
         background-size: 100%;
       }
       #header-background-subtitle {
-        top: 298px; left: 40px; width: 187px; height: 20px;
+        bottom: 170px; left: 302px; width: 187px; height: 20px;
         background: url('subtitle.png') no-repeat;
         background-size: 100%;
       }
@@ -50,17 +48,14 @@
       #logo-icon {
         bottom: 16px; left: 10px; height: 32px; width: 31px;
         background: url('icon-small.png') no-repeat;
-        background-size: 100%;
       }
       #logo-name {
         bottom: 16px; left: 52px; height: 32px; width: 90px;
         background: url('name-small.png') no-repeat;
-        background-size: 100%;
       }
       #logo-subtitle {
-        bottom: 19px; left: 164px; height: 20px; width: 187px;
+        bottom: 12px; left: 164px; height: 20px; width: 187px;
         background: url('subtitle.png') no-repeat;
-        background-size: 100%;
       }
 
       @media only screen and (max-width: 992px) {
@@ -69,12 +64,11 @@
 
       @media only screen and (max-width: 600px) {
         nav .brand-logo.left { width: 160px; }
-        #logo-icon { bottom: 9px; height: 36px; width: 34px; }
         #logo-subtitle { display: none; }
         nav ul li.icon a { height: 56px; width: 64px; padding: 0 20px }
-        nav .icon-text { display: none !important; }
-        header { display: none; }
-        .navbar-fixed { display: block; }
+        nav .icon-text { display: none; }
+        /*.navbar-fixed { display: block !important; }*/
+        header ul { top: calc(100% - 56px); }
       }
 
     </style>
@@ -138,21 +132,21 @@
           let scrollAnimations = [
               {
                   from: 0,
-                  to: 40,
+                  to: 200,
                   during: [
-                      {
-                          element: $('#header-background-name'),
-                          vars: {
-                              left: [40, 124],
-                          },
-                          styles: {
-                              left: '%left%px',
-                          }
-                      }
+                      // {
+                      //     element: $('#header-background-name'),
+                      //     vars: {
+                      //         left: [40, 124],
+                      //     },
+                      //     styles: {
+                      //         left: '%left%px',
+                      //     }
+                      // }
                   ],
               },
               {
-                  from: 40,
+                  from: 200,
                   to: headerAnimationEnd,
                   before: [
                       {
@@ -160,40 +154,52 @@
                           styles: {
                               display: 'none',
                           },
-                      }
+                      },
+                      {
+                          element: $('body header'),
+                          styles: {
+                              opacity: '1'
+                          },
+                      },
                   ],
                   during: [
-                      {
-                          element: $('#header-background-icon'),
-                          vars: {
-                              top: [82, 231+64+24+20],
-                              left: [92, 10+20],
-                              width: [83, 43],
-                          },
-                          styles: {
-                              top: '%top%px',
-                              left: '%left%px',
-                              width: '%width%px',
-                          }
-                      },
-                      {
-                          element: $('#header-background-modules'),
-                          vars: {
-                              top: [40, 189+64+24+44],
-                              left: [40, -42+44],
-                              width: [187, 99],
-                          },
-                          styles: {
-                              opacity: '%i%',
-                              top: '%top%px',
-                              left: '%left%px',
-                              width: '%width%px',
-                          }
-                      },
+                      // {
+                      //     element: $('#header-background-icon'),
+                      //     vars: {
+                      //         top: [82, 231+64+24+20],
+                      //         left: [92, 10+20],
+                      //         width: [83, 43],
+                      //     },
+                      //     styles: {
+                      //         top: '%top%px',
+                      //         left: '%left%px',
+                      //         width: '%width%px',
+                      //     }
+                      // },
+                      // {
+                      //     element: $('#header-background-modules'),
+                      //     vars: {
+                      //         top: [40, 189+64+24+44],
+                      //         left: [40, -42+44],
+                      //         width: [187, 99],
+                      //     },
+                      //     styles: {
+                      //         opacity: '%i%',
+                      //         top: '%top%px',
+                      //         left: '%left%px',
+                      //         width: '%width%px',
+                      //     }
+                      // },
                       {
                           element: $('div.navbar-fixed'),
                           styles: {
                               display: 'none',
+                          },
+                      },
+                      {
+                          element: $('body header'),
+                          styles: {
+                              opacity: '1'
                           },
                       },
                   ],
@@ -204,6 +210,12 @@
                               display: 'block',
                           },
                       },
+                      {
+                          element: $('body header'),
+                          styles: {
+                              opacity: '0'
+                          },
+                      }
                   ],
               },
           ];
@@ -251,21 +263,19 @@
                       p = (st - scrollAnimations[i].from) / (scrollAnimations[i].to - scrollAnimations[i].from);
                       elements = scrollAnimations[i].during;
                   }
-                  j = elements.length;
+                  j = elements ? elements.length : 0;
                   while (j--) {
                       applyStyles(elements[j], p);
                   }
               }
           }).scroll();
 
-          if (!w.location.href.match(/^https?:\/\/[a-z-.]+\/(home?)$/)) {
-              w.setTimeout(function() {
-                  let st = d.documentElement.scrollTop || d.body.scrollTop;
-                  if (st < headerAnimationEnd) {
-                      $(w).scrollTo(headerAnimationEnd)
-                  }
-              }, 100);
-          }
+          w.setTimeout(function() {
+              let st = d.documentElement.scrollTop || d.body.scrollTop;
+              if (st < 100) {
+                  $(w).scrollTo(headerAnimationEnd, 1000);
+              }
+          }, w.location.href.match(/^https?:\/\/[a-z-.]+\/(home?)$/) ? 10000 : 10000);
       });
   }(jQuery, window, document))
 </script>
