fix positioning of header elements

--- a/layout/prototype.html
+++ b/layout/prototype.html
@@ -20,22 +20,22 @@
       header nav { overflow: hidden; height: 640px; position: relative; }
       header .logo-wrapper div { position: absolute; }
       #header-background-icon {
-        bottom: 334px; left: 354px; width: 83px; height: 86px;
+        bottom: 334px; left: calc(50% - 41px); width: 83px; height: 86px;
         background: url('icon.png') no-repeat;
         background-size: 100%;
       }
       #header-background-modules {
-        bottom: 290px; left: 302px; width: 187px; height: 172px;
+        bottom: 290px; left: calc(50% - 93px); width: 187px; height: 172px;
         background: url('modules.png') no-repeat;
         background-size: 100%;
       }
       #header-background-name {
-        bottom: 196px; left: 302px; width: 187px; height: 67px;
+        bottom: 196px; left: calc(50% - 93px); width: 187px; height: 67px;
         background: url('name.png') no-repeat;
         background-size: 100%;
       }
       #header-background-subtitle {
-        bottom: 170px; left: 302px; width: 187px; height: 20px;
+        bottom: 170px; left: calc(50% - 93px); width: 187px; height: 20px;
         background: url('subtitle.png') no-repeat;
         background-size: 100%;
       }
